--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "devDependencies": {
     "@types/react": "^17.0.2",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
